--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ python-dotenv==1.0.1
 psycopg[binary]==3.1.19
 # telegram bot wrapper
 python-telegram-bot==21.1.1
+# async server modules
+fastapi==0.111.0
+gunicorn==22.0.0
 
 
 
